Avoid overlappping versions in sidebar

--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -265,6 +265,9 @@ $toggler-width: 40px
   color: $main-menu-sidebar-font-color
   font-family: $body-font-family
   font-style: normal
+  overflow: hidden
+  text-overflow: ellipsis
+  overflow-wrap: initial
 
   h3
     display: block
